Changed files the MVC

--- a/views/Users/Courses.html
+++ b/views/Users/Courses.html
@@ -12,14 +12,14 @@
     <title>Education - List of Meetings</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../../public/css/user css/owl.css">
+    <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
 <!--
 
 TemplateMo 569 Edu Meeting
@@ -129,7 +129,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$14.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-01.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -146,7 +146,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$22.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -163,7 +163,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$24.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -180,7 +180,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$32.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-04.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-04.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -197,7 +197,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$34.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -214,7 +214,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$45.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -231,7 +231,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$52.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-01.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -248,7 +248,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$64.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -265,7 +265,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <div class="price">
                         <span>$74.00</span>
                       </div>
-                      <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
+                      <a href="meeting-details.html"><img src="../../public/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
                       <div class="date">
@@ -305,17 +305,17 @@ https://templatemo.com/tm-569-edu-meeting
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/js/user js/jquery.min.js"></script>
+    <script src="../../public/js/user js/bootstrap.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../../public/js/user js/isotope.min.js"></script>
+    <script src="../../public/js/user js/owl-carousel.js"></script>
+    <script src="../../public/js/user js/lightbox.js"></script>
+    <script src="../../public/js/user js/tabs.js"></script>
+    <script src="../../public/js/user js/isotope.js"></script>
+    <script src="../../public/js/user js/video.js"></script>
+    <script src="../../public/js/user js/slick-slider.js"></script>
+    <script src="../../public/js/user js/custom.js"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
