--- a/views/Users/profile.html
+++ b/views/Users/profile.html
@@ -12,7 +12,7 @@
     <title>Education - List of Meetings</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Bootstrap CSS (Make sure this is included) -->
@@ -27,10 +27,10 @@
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../../public/css/user css/owl.css">
+    <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
     <!--
 
 TemplateMo 569 Edu Meeting
@@ -174,7 +174,7 @@ https://templatemo.com/tm-569-edu-meeting
 
                     <div class="item" style="text-align:center; height:320px; background-color: white;">
                         <div class="profile-img" style="text-align: center; margin-right:12px;">
-                            <img src="assets/images/course-02.jpg" id="profile-img" alt="Profile Image"
+                            <img src="../../public/images/course-02.jpg" id="profile-img" alt="Profile Image"
                                 style="width:150px; height:150px; object-fit: cover; border-radius:50%;">
                         </div>
 
@@ -461,17 +461,17 @@ https://templatemo.com/tm-569-edu-meeting
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/js/user js/jquery.min.js"></script>
+    <script src="../../public/js/user js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../../public/js/user js/isotope.min.js"></script>
+    <script src="../../public/js/user js/owl-carousel.js"></script>
+    <script src="../../public/js/user js/lightbox.js"></script>
+    <script src="../../public/js/user js/tabs.js"></script>
+    <script src="../../public/js/user js/isotope.js"></script>
+    <script src="../../public/js/user js/video.js"></script>
+    <script src="../../public/js/user js/slick-slider.js"></script>
+    <script src="../../public/js/user js/custom.js"></script>
     <script>
         /* triggering edit btn + img input + validation for file type and uploading the img (changing src img) */
         document.getElementById('edit-img-btn').onclick = () => document.getElementById('profileImage').click();
