--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -10,13 +10,13 @@
     <title>Education Template - Meeting Detail Page</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../../public/css/user css/owl.css">
+    <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <style>
@@ -177,16 +177,16 @@
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/js/user js/jquery.min.js"></script>
+    <script src="../../public/js/user js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../../public/js/user js/isotope.min.js"></script>
+    <script src="../../public/js/user js/owl-carousel.js"></script>
+    <script src="../../public/js/user js/lightbox.js"></script>
+    <script src="../../public/js/user js/js/tabs.js"></script>
+    <script src="../../public/js/user js/js/video.js"></script>
+    <script src="../../public/js/user js/js/slick-slider.js"></script>
+    <script src="../../public/js/user js/js/custom.js"></script>
     <script>
         // Load the IFrame Player API code asynchronously
         var tag = document.createElement('script');
