--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -12,14 +12,14 @@
     <title>Education Meeting HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../../public/css/user css/owl.css">
+    <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
 <!--
 
 TemplateMo 569 Edu Meeting
@@ -72,7 +72,7 @@ https://templatemo.com/tm-569-edu-meeting
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
       <video autoplay muted loop id="bg-video">
-          <source src="assets/images/course-video.mp4" type="video/mp4" />
+          <source src="../../public/images/course-video.mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
@@ -102,7 +102,7 @@ https://templatemo.com/tm-569-edu-meeting
           
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-01.png" alt="">
+                <img src="../../public/images/service-icon-01.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Best Education</h4>
@@ -112,7 +112,7 @@ https://templatemo.com/tm-569-edu-meeting
             
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-02.png" alt="">
+                <img src="../../public/images/service-icon-02.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Best Teachers</h4>
@@ -122,7 +122,7 @@ https://templatemo.com/tm-569-edu-meeting
             
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-03.png" alt="">
+                <img src="../../public/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Best Students</h4>
@@ -132,7 +132,7 @@ https://templatemo.com/tm-569-edu-meeting
             
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-02.png" alt="">
+                <img src="../../public/images/service-icon-02.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Online Meeting</h4>
@@ -142,7 +142,7 @@ https://templatemo.com/tm-569-edu-meeting
             
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-03.png" alt="">
+                <img src="../../public/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Best Networking</h4>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="price">
                     <span>$22.00</span>
                   </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt="New Lecturer Meeting"></a>
+                  <a href="meeting-details.html"><img src="../../public/images/meeting-01.jpg" alt="New Lecturer Meeting"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
@@ -204,7 +204,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="price">
                     <span>$36.00</span>
                   </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt="Online Teaching"></a>
+                  <a href="meeting-details.html"><img src="../../public/images/meeting-02.jpg" alt="Online Teaching"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
@@ -221,7 +221,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="price">
                     <span>$14.00</span>
                   </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt="Higher Education"></a>
+                  <a href="meeting-details.html"><img src="../../public/images/meeting-03.jpg" alt="Higher Education"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
@@ -238,7 +238,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="price">
                     <span>$48.00</span>
                   </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-04.jpg" alt="Student Training"></a>
+                  <a href="meeting-details.html"><img src="../../public/images/meeting-04.jpg" alt="Student Training"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
@@ -354,7 +354,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-12">
           <div class="owl-courses-item owl-carousel">
             <div class="item">
-              <img src="assets/images/course-01.jpg" alt="Course One">
+              <img src="../../public/images/course-01.jpg" alt="Course One">
               <div class="down-content">
                 <h4>Morbi tincidunt elit vitae justo rhoncus</h4>
                 <div class="info">
@@ -376,7 +376,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-02.jpg" alt="Course Two">
+              <img src="../../public/images/course-02.jpg" alt="Course Two">
               <div class="down-content">
                 <h4>Curabitur molestie dignissim purus vel</h4>
                 <div class="info">
@@ -396,7 +396,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
+              <img src="../../public/images/course-03.jpg" alt="">
               <div class="down-content">
                 <h4>Nulla at ipsum a mauris egestas tempor</h4>
                 <div class="info">
@@ -417,7 +417,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
+              <img src="../../public/images/course-04.jpg" alt="">
               <div class="down-content">
                 <h4>Aenean molestie quis libero gravida</h4>
                 <div class="info">
@@ -439,7 +439,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-01.jpg" alt="">
+              <img src="../../public/images/images/course-01.jpg" alt="">
               <div class="down-content">
                 <h4>Lorem ipsum dolor sit amet adipiscing elit</h4>
                 <div class="info">
@@ -461,7 +461,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-02.jpg" alt="">
+              <img src="../../public/images/course-02.jpg" alt="">
               <div class="down-content">
                 <h4>TemplateMo is the best website for Free CSS</h4>
                 <div class="info">
@@ -483,7 +483,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
+              <img src="../../public/images/course-03.jpg" alt="">
               <div class="down-content">
                 <h4>Web Design Templates at your finger tips</h4>
                 <div class="info">
@@ -505,7 +505,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
+              <img src="../../public/images/course-04.jpg" alt="">
               <div class="down-content">
                 <h4>Please visit our website again</h4>
                 <div class="info">
@@ -527,7 +527,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-01.jpg" alt="">
+              <img src="../../public/images/course-01.jpg" alt="">
               <div class="down-content">
                 <h4>Responsive HTML Templates for you</h4>
                 <div class="info">
@@ -549,7 +549,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-02.jpg" alt="">
+              <img src="../../public/images/course-02.jpg" alt="">
               <div class="down-content">
                 <h4>Download Free CSS Layouts for your business</h4>
                 <div class="info">
@@ -571,7 +571,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
+              <img src="../../public/images/course-03.jpg" alt="">
               <div class="down-content">
                 <h4>Morbi in libero blandit lectus cursus</h4>
                 <div class="info">
@@ -593,7 +593,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
+              <img src="../../public/images/course-04.jpg" alt="">
               <div class="down-content">
                 <h4>Curabitur molestie dignissim purus</h4>
                 <div class="info">
@@ -664,7 +664,7 @@ https://templatemo.com/tm-569-edu-meeting
         </div> 
         <div class="col-lg-6 align-self-center">
           <div class="video">
-            <a href="https://www.youtube.com/watch?v=HndV87XpkWg" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=HndV87XpkWg" target="_blank"><img src="../../public/images/play-icon.png" alt=""></a>
           </div>
         </div>
       </div>
@@ -755,16 +755,16 @@ https://templatemo.com/tm-569-edu-meeting
 </div>
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/js/user js/jquery.min.js"></script>
+    <script src="../../public/js/user js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../../public/js/user js/isotope.min.js"></script>
+    <script src="../../public/js/user js/owl-carousel.js"></script>
+    <script src="../../public/js/user js/lightbox.js"></script>
+    <script src="../../public/js/user js/tabs.js"></script>
+    <script src="../../public/js/user js/video.js"></script>
+    <script src="../../public/js/user js/slick-slider.js"></script>
+    <script src="../../public/js/user js/js/custom.js"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
