--- a/views/Users/meeting-details.html
+++ b/views/Users/meeting-details.html
@@ -12,14 +12,14 @@
     <title>Education Template - Meeting Detail Page</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../../public/css/user css/owl.css">
+    <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <!--
 
@@ -149,7 +149,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>12</span></h6>
                   </div>
-                  <a href="meeting-details.html"><img src="assets/images/single-meeting.jpg" alt=""></a>
+                  <a href="meeting-details.html"><img src="../../public/images/single-meeting.jpg" alt=""></a>
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
@@ -276,16 +276,16 @@ https://templatemo.com/tm-569-edu-meeting
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/js/user js/jquery/jquery.min.js"></script>
+    <script src="../../public/js/user js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../../public/js/user js/isotope.min.js"></script>
+    <script src="../../public/js/user js/owl-carousel.js"></script>
+    <script src="../../public/js/user js/lightbox.js"></script>
+    <script src="../../public/js/user js/tabs.js"></script>
+    <script src="../../public/js/user js/video.js"></script>
+    <script src="../../public/js/user js/slick-slider.js"></script>
+    <script src="../../public/js/user js/custom.js"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
