--- a/views/Users/register.html
+++ b/views/Users/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css"></head>
+    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css"></head>
 <body>
     <!-- Button to trigger the modal -->
     <div class="scroll-to-section">
