--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -12,14 +12,9 @@
     <title>MEGAMINDS</title>
 
     <!-- Bootstrap core CSS -->
-<<<<<<< Updated upstream:views/Users/index.html
-    <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
-
-=======
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="public/js/signup_and_in.js"></script>
-    <link href="public/css/signup_and_in.css" rel="stylesheet">
->>>>>>> Stashed changes:index.html
+    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../../public/js/signup_and_in.js"></script>
+    <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
