--- a/views/Users/login.html
+++ b/views/Users/login.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-<<<<<<< Updated upstream:views/Users/login.html
-    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css"></head>
-=======
     <!-- <script src="public/js/signup_and_in.js"></script> -->
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css"></head>
-    <link href="public/css/signup_and_in.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../public/css/templatemo-edu-meeting.css"></head>
+    <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 
->>>>>>> Stashed changes:login.html
 <body>
 <!-- Button to trigger the modal -->
 <div class="scroll-to-section">
@@ -45,15 +41,15 @@
             <!-- Alternative Login Options -->
             <div class="divider">or</div>
             <button type="button" class="google-btn">
-                <img src="C:/Users/20111/OneDrive/Desktop/google.png" id="google" alt="Google Logo" class="google-icon">
+                <img src="../../public/images/google.png" id="google" alt="Google Logo" class="google-icon">
                 Continue with Google
             </button>
             <button type="button" class="microsoft-btn">
-                <img src="C:/Users/20111/OneDrive/Desktop/microsoft.png" id="microsoft" alt="Microsoft Logo" class="google-icon">
+                <img src="../../public/images/microsoft.png" id="microsoft" alt="Microsoft Logo" class="google-icon">
                 Continue with Microsoft
             </button>
             <button type="button" class="apple-btn">
-                <img src="C:/Users/20111/OneDrive/Desktop/apple.png" id="apple" alt="Apple Logo" class="google-icon">
+                <img src="../../public/images/apple.png" id="apple" alt="Apple Logo" class="google-icon">
                 Continue with Apple
             </button>
 
