--- a/views/Users/register.html
+++ b/views/Users/register.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-<<<<<<< Updated upstream:views/Users/register.html
-    <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css"></head>
-=======
-    <script src="public/js/signup_and_in.js"></script>
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css"></head>
-    <link href="public/css/signup_and_in.css" rel="stylesheet">
->>>>>>> Stashed changes:register.html
+    <script src="../../public/js/signup_and_in.js"></script>
+    <link rel="stylesheet" href="../../public/css/templatemo-edu-meeting.css"></head>
+    <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 <body>
     <!-- Button to trigger the modal -->
     <div class="scroll-to-section">
