--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -13,7 +13,6 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../public/js/signup_and_in.js"></script>
     <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
@@ -21,13 +20,7 @@
     <link rel="stylesheet" href="../../public/css/user css/templatemo-edu-meeting.css">
     <link rel="stylesheet" href="../../public/css/user css/owl.css">
     <link rel="stylesheet" href="../../public/css/user css/lightbox.css">
-<!--
 
-TemplateMo 569 Edu Meeting
-
-https://templatemo.com/tm-569-edu-meeting
-
--->
   </head>
 
 <body>
@@ -818,7 +811,7 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
   
       <!-- The Modal -->
-      <div id="loginModal" class="modal" >
+      <div id="loginModal" class="modal" style="display: none;">
           <!-- Modal content -->
           <div class="modal-content">
               <span class="close">&times;</span>
@@ -844,15 +837,15 @@ https://templatemo.com/tm-569-edu-meeting
                   <!-- Alternative Login Options -->
                   <div class="divider">or</div>
                   <button type="button" class="google-btn">
-                      <img src="public/images/google.png" id="google" alt="Google Logo" class="google-icon">
+                      <img src="../../public/images/google.png" id="google" alt="Google Logo" class="google-icon">
                       Continue with Google
                   </button>
                   <button type="button" class="microsoft-btn">
-                      <img src="public/images/microsoft.png" id="microsoft" alt="Google Logo" class="google-icon">
+                      <img src="../../public/images/microsoft.png" id="microsoft" alt="Google Logo" class="google-icon">
                       Continue with Microsoft
                   </button>
                   <button type="button" class="apple-btn">
-                      <img src="public/images/apple.png" id="apple" alt="Google Logo" class="google-icon">
+                      <img src="../../public/images/apple.png" id="apple" alt="Google Logo" class="google-icon">
                       Continue with Apple
                   </button>
   
@@ -863,70 +856,31 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
 </body>
 <script>
-   var modal = document.getElementById("loginModal");
-        
-        // Get the button that opens the modal
-        var btn = document.getElementById("openModal");
-        
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-        
-        // When the user clicks the button, open the modal
-        btn.onclick = function() {
-            modal.style.display = "block";
-        }
-        
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
-            modal.style.display = "none";
-        }
-        
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-        
-        // Toggle password visibility
-        function togglePassword() {
-            var passwordInput = document.getElementById("password");
-            if (passwordInput.type === "password") {
-                passwordInput.type = "text";
-            } else {
-                passwordInput.type = "password";
-            }
-        }
-        
-        
+// Get the modal element
+var modal = document.getElementById("loginModal");
 
+// Get the button that opens the modal
+var joinButton = document.getElementById("join");
 
-        // Function to show the modal
-function showModal() {
-  var modal = document.getElementById("loginModal");
-  modal.style.display = "block"; // Show the modal
+// Get the <span> element that closes the modal
+var closeButton = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal
+joinButton.onclick = function() {
+  modal.style.display = "flex"; // Use flex to center the modal
 }
 
-// Function to hide the modal
-function closeModal() {
-  var modal = document.getElementById("loginModal");
-  modal.style.display = "none"; // Hide the modal
+// When the user clicks on <span> (x), close the modal
+closeButton.onclick = function() {
+  modal.style.display = "none";
 }
 
-// Add event listener to "Join Us Now!" button
-document.getElementById("join").addEventListener("click", showModal);
-
-// Add event listener to close button (the "x" icon)
-document.querySelector(".close").addEventListener("click", closeModal);
-
-// Add event listener to close modal when clicking outside the modal content
+// When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
-  var modal = document.getElementById("loginModal");
   if (event.target == modal) {
-    modal.style.display = "none"; // Close the modal if user clicks outside
+    modal.style.display = "none";
   }
 }
-
 
 </script>
 </html>
