--- a/views/Users/login.html
+++ b/views/Users/login.html
@@ -1,44 +1,43 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <!-- <script src="public/js/signup_and_in.js"></script> -->
+     <script src="public/js/signup_and_in.js"></script> 
     <link rel="stylesheet" href="../../public/css/templatemo-edu-meeting.css"></head>
     <link href="../../public/css/signup_and_in.css" rel="stylesheet">
 
 <body>
-<!-- Button to trigger the modal -->
+
 <div class="scroll-to-section">
     <a href="javascript:void(0)" id="openModal">Join Us Now!</a>
 </div>
 
-<!-- The Modal -->
+
 <div id="loginModal" class="modal" style="display: none;">
-    <!-- Modal content -->
+    
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Welcome back</h2>
         <form>
-            <!-- Email input -->
+        
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Enter your Email" required>
 
-            <!-- Password input -->
+         
             <label for="password">Password</label>
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Enter your Password" required>
                 <button type="button" class="toggle-password" onclick="togglePassword()">&#128065;</button>
             </div>
 
-            <!-- Forgot Password -->
+            
             <a href="#" class="forgot-password">Forgot password?</a>
 
-            <!-- Login button -->
+    
             <button type="submit" class="login-btn">Login</button>
 
-            <!-- Alternative Login Options -->
             <div class="divider">or</div>
             <button type="button" class="google-btn">
                 <img src="../../public/images/google.png" id="google" alt="Google Logo" class="google-icon">
@@ -53,7 +52,7 @@
                 Continue with Apple
             </button>
 
-            <!-- New user sign-up -->
+          
             <p>New to the site? <a href="register.html">Sign up</a></p>
         </form>
     </div>
@@ -61,4 +60,4 @@
 
 </body>
 
-</html>
+</html> -->
