--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -12,13 +12,8 @@
     <title>MEGAMINDS</title>
 
     <!-- Bootstrap core CSS -->
-<<<<<<< Updated upstream
-    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
-=======
     <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../public/js/signup_and_in.js"></script>
->>>>>>> Stashed changes
-    <link href="../../public/css/signup_and_in.css" rel="stylesheet">
+    <link href="../../public/css/user css/signup_and_in.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="../../public/css/user css/fontawesome.css">
