--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -62,30 +62,6 @@
 </head>
 
 <body>
-
-    <!-- Sub Header -->
-    <div class="sub-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-sm-8">
-                    <div class="left-content">
-                        <p>This is an <em>educational</em> website.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-4">
-                    <div class="right-icons">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
         <div class="container">
@@ -166,13 +142,10 @@
         </section>
 
         <div class="footer">
-            <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-                <br>
-                Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
-                <br>
-                Distributed By: <a href="https://themewagon.com" target="_blank" title="Build Better UI, Faster">ThemeWagon</a>
-            </p>
-        </div>
+            <p>Copyright © 2024 MEGAMINDS. All Rights Reserved. 
+              </p>
+          </div>
+        </section>
     </section>
 
     <!-- Scripts -->
