--- a/views/Users/cart-page.html
+++ b/views/Users/cart-page.html
@@ -30,32 +30,6 @@ https://templatemo.com/tm-569-edu-meeting
   </head>
 
 <body>
-
-   
-
-  <!-- Sub Header -->
-  <div class="sub-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-sm-8">
-          <div class="left-content">
-            <p>This is an <em>educational</em> website.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-4">
-          <div class="right-icons">
-            <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
       <div class="container">
@@ -70,7 +44,6 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="Courses.html" >My Courses</a></li>
-                          <li><a href="cart-page.html" class="active">My Cart</a></li> 
                           <li class="has-sub">
                               <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
@@ -78,6 +51,7 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
+                          <li><a href="cart-page.html" class="active">My Cart</a></li> 
                           <li><a href="Courses.html">My Profile</a></li> 
                           <li><a href="index.html">Sign Out</a></li> 
                       </ul>        
@@ -190,13 +164,10 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>
-          Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
-          <br>
-          Distibuted By: <a href="https://themewagon.com" target="_blank" title="Build Better UI, Faster">ThemeWagon</a>
+      <p>Copyright © 2024 MEGAMINDS. All Rights Reserved. 
         </p>
     </div>
+  </section>
   </section>
 
 
