--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -31,7 +31,7 @@
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="Courses.html" class="logo">
+                    <a href="index.html" class="logo">
                         MegaMinds
                     </a>
                     <!-- ***** Logo End ***** -->
@@ -74,7 +74,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="caption">
-              <h2>Welcome *Username* to MEGAMINDS</h2>
+              <h2>Welcome Laila to MEGAMINDS</h2>
               <h5>Where you maximise your mind's potential</h5>
               <div class="main-button-red">
                 <div class="scroll-to-section"><button id="join">Join Us Now!</button></div>
@@ -108,7 +108,7 @@
               </div>
               <div class="down-content">
                 <h4>Best Teachers</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
+                <p>Discover our top-rated educators, recognized for their expertise and passion for teaching. They bring real-world experience into the classroom, inspiring students to excel in computer science.</p>
               </div>
             </div>
             
@@ -118,7 +118,7 @@
               </div>
               <div class="down-content">
                 <h4>Best Students</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
+                <p>Meet our outstanding students who have achieved remarkable success through dedication and innovation. Their projects and contributions have made a significant impact in the tech community.</p>
               </div>
             </div>
             
@@ -127,8 +127,8 @@
                 <img src="../../public/images/service-icon-02.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Online Meeting</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
+                <h4>Best Education</h4>
+                <p>At the heart of our computer science program is a commitment to quality education. We provide students with the tools and resources needed to thrive in a rapidly evolving tech landscape.</p>
               </div>
             </div>
             
@@ -137,8 +137,8 @@
                 <img src="../../public/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Networking</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
+                <h4>Best Courses</h4>
+                <p>Explore our highly recommended courses designed to equip you with essential skills and knowledge in computer science. Each course is crafted by experienced instructors and tailored to meet industry demands.</p>
               </div>
             </div>
             
@@ -185,8 +185,8 @@
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>New Lecturers Meeting</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>Interview preparation Session</h4></a>
+                  <p>Get expert advice on how to ace technical and behavioral interviews, with tips on answering common questions and showcasing your skills.</p>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                     <h6>Nov <span>24</span></h6>
                   </div>
                   <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <p>Learn effective methods to deliver engaging and interactive lessons in a virtual environment, designed to enhance online education.</p>
                 </div>
               </div>
             </div>
@@ -219,8 +219,8 @@
                   <div class="date">
                     <h6>Nov <span>26</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Higher Education Conference</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>How to write a cv</h4></a>
+                  <p>Master the art of crafting a professional and compelling CV that highlights your strengths and sets you apart in the job market.</p>
                 </div>
               </div>
             </div>
@@ -237,7 +237,8 @@
                     <h6>Nov <span>30</span></h6>
                   </div>
                   <a href="meeting-details.html"><h4>Student Training Meetup</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <p>A hands-on workshop that provides students with practical training and insights into industry-relevant tools and technologies.
+                  </p>
                 </div>
               </div>
             </div>
@@ -247,7 +248,7 @@
     </div>
   </section>
 
-  <section class="apply-now" id="apply">
+  <!-- <section class="apply-now" id="apply">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 align-self-center">
@@ -333,7 +334,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="our-courses" id="courses">
     <div class="container">
@@ -346,9 +347,9 @@
         <div class="col-lg-12">
           <div class="owl-courses-item owl-carousel">
             <div class="item">
-              <img src="../../public/images/course-01.jpg" alt="Course One">
+              <img src="../../public/images/AI.jpeg" alt="Course One">
               <div class="down-content">
-                <h4>Morbi tincidunt elit vitae justo rhoncus</h4>
+                <h4>Introduction To Ai</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -368,9 +369,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-02.jpg" alt="Course Two">
+              <img src="../../public/images/FSD.jpg" alt="Course Two">
               <div class="down-content">
-                <h4>Curabitur molestie dignissim purus vel</h4>
+                <h4>Full Stack Developer</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -388,9 +389,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-03.jpg" alt="">
+              <img src="../../public/images/DL.jpg" alt="">
               <div class="down-content">
-                <h4>Nulla at ipsum a mauris egestas tempor</h4>
+                <h4>Deep Learning</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -409,9 +410,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-04.jpg" alt="">
+              <img src="../../public/images/NS.png" alt="">
               <div class="down-content">
-                <h4>Aenean molestie quis libero gravida</h4>
+                <h4>Networks And Security</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -431,31 +432,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/images/course-01.jpg" alt="">
+              <img src="../../public/images/CC.png" alt="">
               <div class="down-content">
-                <h4>Lorem ipsum dolor sit amet adipiscing elit</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$250</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="../../public/images/course-02.jpg" alt="">
-              <div class="down-content">
-                <h4>TemplateMo is the best website for Free CSS</h4>
+                <h4>Cloud Computing And Big Data</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -475,9 +454,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-03.jpg" alt="">
+              <img src="../../public/images/DS.jpg" alt="">
               <div class="down-content">
-                <h4>Web Design Templates at your finger tips</h4>
+                <h4>Data Structures And Algorithms</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -497,9 +476,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-04.jpg" alt="">
+              <img src="../../public/images/OOP.png" alt="">
               <div class="down-content">
-                <h4>Please visit our website again</h4>
+                <h4>Object Oriented Programming</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -519,53 +498,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-01.jpg" alt="">
+              <img src="../../public/images/CPP.jpg" alt="">
               <div class="down-content">
-                <h4>Responsive HTML Templates for you</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$400</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="../../public/images/course-02.jpg" alt="">
-              <div class="down-content">
-                <h4>Download Free CSS Layouts for your business</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$430</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="../../public/images/course-03.jpg" alt="">
-              <div class="down-content">
-                <h4>Morbi in libero blandit lectus cursus</h4>
+                <h4>Introduction To Computer Science</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -585,9 +520,9 @@
               </div>
             </div>
             <div class="item">
-              <img src="../../public/images/course-04.jpg" alt="">
+              <img src="../../public/images/IP.jpg" alt="">
               <div class="down-content">
-                <h4>Curabitur molestie dignissim purus</h4>
+                <h4>Image Processing</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -618,7 +553,7 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <h2>A Few Facts About Our University</h2>
+              <h2>A Few Facts About Our Website</h2>
             </div>
             <div class="col-lg-6">
               <div class="row">
@@ -713,15 +648,15 @@
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>info@meeting.edu</span>
+                <span>info@megaminds.edu</span>
               </li>
               <li>
                 <h6>Street Address</h6>
-                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+                <span>Cairo - Obour</span>
               </li>
               <li>
                 <h6>Website URL</h6>
-                <span>www.meeting.edu</span>
+                <span>www.megaminds.edu</span>
               </li>
             </ul>
           </div>
@@ -902,8 +837,6 @@
       </form>
   </div>
 </div>
-
-
 </body>
 <script>
 // Get the "Join Us Now!" button
