mesh 3ayez yb2a shafaf leh?

--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -67,7 +67,7 @@
 
 .discussion-container h1 {
     font-size: 1.5rem; /* Adjusted size for heading */
-    color: #721010; /* Heading color */
+    color: white; /* Heading color */
 }
 
 #discussionForm {
@@ -101,7 +101,7 @@ button:hover {
 }
 
 .discussion-comment {
-    background-color: #f9f9f9; /* Light background for comments */
+    color: #f9f9f9; /* Light background for comments */
     border: 1px solid #ddd; /* Light border */
     border-radius: 4px;
     padding: 10px;
