el loon mesh 3ayez yzbot

--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -141,6 +141,8 @@ button:hover {
     margin-left: 20px; /* Indent replies */
     border-left: 1px solid #ddd; /* Vertical line for replies */
     padding-left: 10px;
+    color:white;
+    background-color: transparent;
 }
 
 .reply {
