style ma3goon el 2snan

--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -25,6 +25,10 @@
             color: white; /* Change text color for contrast */
             border-color: #721010; 
         }
+        #nextButton{
+            background-color: #721010;
+            border-color:  #721010;;
+        }
 
         .list-group-item.done {
             color: green; /* Change text color for completed lessons */
@@ -240,6 +244,9 @@ button:hover {
                     </main>
                 </div>
             </div>
+        </section>
+        <br><br>
+            <section>
             <div class="discussion-container">
                 <br><br>
                 <h1>Course Discussion</h1>
