--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -30,6 +30,16 @@
             border-color:  #721010;;
         }
 
+        #nextButton:hover{
+            border-color: #721010;
+            background-color: #721010;
+        }
+        #nextButton:active{
+            border-color: #721010;
+            background-color: #721010;
+        }
+       
+
         .list-group-item.done {
             color: green; /* Change text color for completed lessons */
             text-decoration: line-through; /* Strikethrough for completed lessons */
