--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -173,38 +173,44 @@ button:hover {
 </head>
 
 <body>
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">MegaMinds</a>
-                        <!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="Courses.html">My Courses</a></li>
-                            <li class="has-sub">
-                                <a href="javascript:void(0)">Meetings</a>
-                                <ul class="sub-menu">
-                                    <li><a href="Courses.html">Upcoming Meetings</a></li>
-                                    <li><a href="meeting-details.html">Meeting Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="cart-page.html">Cart</a></li>
-                            <li><a href="Courses.html">My Profile</a></li>
-                            <li><a href="index.html">Sign Out</a></li>
-                        </ul>
-                        <a class='menu-trigger'>
-                            <span>Menu</span>
-                        </a>
-                        <!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
+
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a href="index.html" class="logo">
+                        MegaMinds
+                    </a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li><a href="Courses.html" class="active">My Courses</a></li>
+                        <li class="has-sub">
+                            <a href="javascript:void(0)">Meetings</a>
+                            <ul class="sub-menu">
+                                <li><a href="meetings.html">Upcoming Meetings</a></li>
+                                <li><a href="meeting-details.html">Meeting Details</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="cart-page.html">Cart</a></li> 
+
+                        <li><a href="index.html">My Profile</a></li> 
+                        
+                        <li><a href="index.html">Sign out</a></li> 
+
+                    </ul>        
+                    <a class='menu-trigger'>
+                        <span>Menu</span>
+                    </a>
+                    <!-- ***** Menu End ***** -->
+                </nav>
             </div>
         </div>
-    </header>
+    </div>
+</header>
     <!-- ***** Header Area End ***** -->
 
     <section class="heading-page header-text" id="top">
