--- a/views/Users/meeting-details.html
+++ b/views/Users/meeting-details.html
@@ -138,8 +138,9 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="#">Behance</a></li>
                         </ul>
                         <div class="main-button-red">
-                          <a href="cart-page.html">Add To Cart</a>
+                          <button onclick="window.location.href='cart-page.html'">Add To Cart</button>
                         </div>
+                        
                       </div>
                     </div>
                   </div>
